projeto-preco-custo agora com ja tem o custo

--- a/projeto-preco-custo/app.html
+++ b/projeto-preco-custo/app.html
@@ -15,6 +15,15 @@
             <button id="btn">Calcular</button>
             <h2 id="trocarTexto">Calcule algo...</h2>
             </div>
+            <div class="tenho-custo-title">
+                <h1>Ja tem o Custo?</h1>
+                <div class="container-tenho-custo">
+                    <input type="text" id="custo" placeholder="Custo" onfocus="this.value='';">
+                    <input type="text" id="percentual-custo" placeholder="Percentual" onfocus="this.value='';">
+                    <button id="btn-custo">Calcular</button>
+                    <h2 id="trocarTextoCusto">Calcule algo...</h2>
+                </div>
+            </div>
     <script src="custo.js"></script>
 </body>
 </html>
